# MemeHub

./: .dockerignore  .gitignore  Makefile  Onboarding.md  docker-compose.observability.yml  docker-compose.yml
.github/workflows/: build-on-main.yml
ai_service/: Dockerfile  README.md  main.py  requirements.txt
fastlane/: Fastfile
gateway/: Cargo.toml  Dockerfile
gateway/logs/: gateway.jsonl
gateway/src/: main.rs
gateway/src/Models/: AppState.rs
gateway/src/app/: app.rs
gateway/src/config/: config.rs
gateway/src/handlers/: metrics.rs  proxy.rs
gateway/src/middleware/: metrics.rs
gateway/src/observability/: logging.rs  metrics.rs  mod.rs
gateway/src/services/: proxy.rs
scripts/: open_docker.sh  setup.sh
